# alsa-tools

efw-downloader/: README.rst  meson.build  meson_options.txt
efw-downloader/man/: efw-downloader.1
efw-downloader/src/: config-rom.c  config-rom.h  efw-commands.c  efw-commands.h  efw-proto-sigs-marshal.list  efw-proto.c  efw-proto.h  file-cntr.c  file-cntr.h  heuristics.h  main.c  meson.build  node-dispatcher.c  node-dispatcher.h  op-device-detect.c  op-device-read.c  op-device-update.c  op-file-parse.c  subcmd-device.c  subcmd-file.c  subcmds.h
